--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,11 @@
     },
     "config": {
         "preferred-install": "dist"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/RinatGizatullin/php-json-api.git"
+        }
+    ]
 }
