--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "php": ">=5.5.0",
-        "nilportugues/json-api": "^1.0",
+        "nilportugues/json-api": "dev-dicom",
         "symfony/psr-http-message-bridge": "~0.2"
     },
     "require-dev": {
